--- a/templates/core.html
+++ b/templates/core.html
@@ -5,65 +5,26 @@
 </head>
 <body is="responsive-body">
 
-{%- for group in groupdict -%}
-    <div class="group" id="{{ group|slugifier }}">
-        <h2>{{ group }}</h2>
-        {%- for racename in groupdict[group] -%}
-            {%- set race = racedict[racename] -%}
-            <div class="race" id="{{ racename|slugifier }}">
-                {%- if racename != group -%}
-                    <h3>{{ racename}}</h3>
+    {%- for raceid in racedict -%}
+        {%- set race = racedict[raceid] -%}
+        {%- set seatnum = race['seatnum'] -%}
+        {%- set seatname = race['seatname'] -%}
+        
+        <div class="race" id="{{ raceid|slugifier }}">
+            <h3>{{ race['officename'] }}
+                {%- if (seatnum ~ seatname)|length > 0 -%}
+                    {% if seatname|length > 0 %}
+                        {{ seatname }}
+                    {% else %}
+                        {{ seatnum }}
+                    {% endif %}
                 {% endif %}
-                <table class="main" id="{{ racename|slugifier }}">
-                    <tr><th class="name"></th><th class="votes">Votes</th><th class="pct">Percent</th><th class="progress">&nbsp;</th></tr>
-                    {%- for candidate in race['Candidates']  -%}
-                        <tr>
-                        <td class="name">{{candidate}}</td><td class="votes">{{ race['Candidates'][candidate]['Votes']|int|comma }}</td>
-                        <td class="pct">{% if (race['Votes']|int == 0) or (race['Candidates'][candidate]['Votes']|int == 0) %}0.0{% else %}{{ (race['Candidates'][candidate]['Votes']|float / race['Votes']|float)|pct }}{% endif %}%</td>
-                        <td class="progress">&nbsp;<progress value="{%- if race['Votes']|int == 0 -%}0.0{%-else -%}{{(race['Candidates'][candidate]['Votes']|float / race['Votes']|float)|pct|int}}{% endif %}" max="100"></progress></td>
-</tr>
-                    {%- endfor -%}
-                </table>
-                <div class="tdnote">&nbsp;{{ race['PrecinctsR']|int|comma }} ({{ (race['PrecinctsR']|float / race['Precincts']|float)|pct}}%) of {{ race['Precincts']|int|comma }} precincts reporting at {{ timestamp }}. 
-                {% if DetailsWanted %} <button class="moreinfotag" onclick="moreinfoid{{ racename|slugifier|replace("-", "") }}()">Details</button>{% endif %}</div>
+                {% if race['racetypeid'] in ['R', 'D'] and race['party']|length > 0 %}
+                    -- {{ race['party'] }}
+                {% endif %}
+            </h3>
+        </div>
 
-{% if DetailsWanted %}                
-                <div class="moreinfo" id="moreinfoid{{ racename|slugifier|replace("-", "") }}">
-                    <script>function moreinfoid{{ racename|slugifier|replace("-", "") }}(){var n=document.getElementById("moreinfoid{{ racename|slugifier|replace("-", "") }}");"none"===n.style.display?n.style.display="block":n.style.display="none"}</script>
-                    <table class="tablemoreinfo" id="moreinfoid-{{ racename|slugifier }}-inside">
-                        <tr><th class="morecounty">County</th><th class="morename">Candidate</th><th class="morevotes">Votes</th><th class="morepct">Percent</th></tr>
-                        {% set lastcounty = "vodka" %}
-                        {% for county in race['Counties'] %}
-                            {% for candidate in race['Candidates']  %}
-                            <tr>
-                                {%- if county != lastcounty -%}
-                                    <td class="morecounty">{{ county }} County</td>
-                                {%- else -%}
-                                    <td class="morecounty"> {{county}} FUCK</td>
-                                {% endif %}<td class="morename">{{candidate}}</td><td class="morevotes">{{ race['Counties'][county][candidate]|int|comma }}</td><td class="morepct">
-                                    {%- if race['Counties'][county]['Votes'] == 0 -%}
-                                        0.0%</td>
-                                    {%- else -%}
-                                        {{ (race['Counties'][county][candidate]|float / race['Counties'][county]['Votes']|float)|pct }}%</td>
-                                    {%- endif %}</tr>
-                            {% set lastcounty = county %}
-                            {% endfor %}
-                        
-                        {% endfor %}
-                        
-                        
-                        
-                        
-                    </table>
-                
-                </div>
-{% endif %}
-                
-                
-                
-            </div>
-        {% endfor %}
-    </div>
 {% endfor %}
 
 <script src="https://apps.mypalmbeachpost.com/interactives/gratitude/responsive-child.js" type="text/javascript"></script>
