--- a/templates/core.html
+++ b/templates/core.html
@@ -5,8 +5,10 @@
 </head>
 <body is="responsive-body">
 
-    {%- for raceid in racedict -%}
-        {%- set race = racedict[raceid] -%}
+{% for groupname in paper %}
+    <h2>{{ groupname }}</h2>
+    {% for raceid in paper[groupname] %}
+        {%- set race = paper[groupname][raceid] -%}
         {%- set seatnum = race['seatnum'] -%}
         {%- set seatname = race['seatname'] -%}
         
@@ -25,6 +27,7 @@
             </h3>
         </div>
 
+    {% endfor %}
 {% endfor %}
 
 <script src="https://apps.mypalmbeachpost.com/interactives/gratitude/responsive-child.js" type="text/javascript"></script>
