--- a/templates/core.html
+++ b/templates/core.html
@@ -6,28 +6,33 @@
 <body is="responsive-body">
 
 {% for groupname in paper %}
-    <h2>{{ groupname }}</h2>
-    {% for raceid in paper[groupname] %}
-        {%- set race = paper[groupname][raceid] -%}
-        {%- set seatnum = race['seatnum'] -%}
-        {%- set seatname = race['seatname'] -%}
-        
-        <div class="race" id="{{ raceid|slugifier }}">
-            <h3>{{ race['officename'] }}
-                {%- if (seatnum ~ seatname)|length > 0 -%}
-                    {% if seatname|length > 0 %}
-                        {{ seatname }}
-                    {% else %}
-                        {{ seatnum }}
-                    {% endif %}
+    <div class="group" id="{{ groupname|slugifier }}">
+        <h2>{{ groupname }}</h2>
+        {% for raceid in paper[groupname] %}
+            {%- set race = paper[groupname][raceid] -%}
+            {%- set seatnum = race['seatnum'] -%}
+            {%- set seatname = race['seatname'] -%}
+            {%- set racename = groupname -%}
+            {%- if (seatnum ~ seatname)|length > 0 -%}
+                {%- if seatname|length > 0 %}
+                    {% set racename = (racename ~ " " ~ seatname) %}
+                {%- else %}
+                    {% set racename = (racename ~ " " ~ seatnum) %}
                 {% endif %}
                 {% if race['racetypeid'] in ['R', 'D'] and race['party']|length > 0 %}
-                    -- {{ race['party'] }}
+                    {% set racename = (racename ~ " -- " ~ race['party']) %}
                 {% endif %}
-            </h3>
-        </div>
+            {% endif %}
+            <div class="race" id="{{ raceid|slugifier }}">
+                {%- if racename != groupname -%}
+                    <h3>{{ racename }}</h3>
+                {% endif %}
 
-    {% endfor %}
+                </h3>
+            </div>
+
+        {% endfor %}
+    </div>
 {% endfor %}
 
 <script src="https://apps.mypalmbeachpost.com/interactives/gratitude/responsive-child.js" type="text/javascript"></script>
