--- a/templates/core.html
+++ b/templates/core.html
@@ -45,7 +45,7 @@
 {% endfor %}
 * Incumbent
 
-<script src="https://apps.mypalmbeachpost.com/interactives/gratitude/responsive-child.js" type="text/javascript"></script>
+<script src="{{url_for('static', filename='responsive-child.js')}}" type="text/javascript"></script>
 
 
 </body>
