Use checkmark for web winners

--- a/templates/main.html
+++ b/templates/main.html
@@ -43,7 +43,7 @@
         {% endfor %}
     </div>
 {% endfor %}
-Key: * Incumbent, x- Winner, r- Runoff
+Key: * Incumbent, &#10004; Winner, r- Runoff
 
 <script src="{{url_for('static', filename='responsive-child.js')}}" type="text/javascript"></script>
 
