--- a/templates/race.html
+++ b/templates/race.html
@@ -20,7 +20,7 @@
 </table>
 <div class="tdnote">&nbsp;{{ oneracedict['precinctsreporting']|int|comma }} ({{ oneracedict['precinctsreportingpct']|percentageifier }}%) of {{ oneracedict['precinctstotal']|int|comma }} precincts reporting at {{ oneracedict['lastupdated']|timestampifier }}</div>
 
-Key: * Incumbent, x- Winner, r- Runoff
+Key: * Incumbent, &#10004; Winner, r- Runoff
 
 <script src="{{url_for('static', filename='responsive-child.js')}}" type="text/javascript"></script>
 
